k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-registration
  labels:
    name: user-registration
    environment: production
