k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: user-registration
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  sessionAffinity: None
